--- a/css/styles.css
+++ b/css/styles.css
@@ -9,42 +9,27 @@
   user-select: none;
 }
 
-div
-{
-  display: block;
-  float: left;
-  padding: 0;
-}
-
 .Renderer
 {
-  -webkit-perspective-origin: 50% 50%;
-}
-
-.Renderer *
-{
-  position: relative;
+  display: block;
 }
 
 .Toolbar
 {
-  background: LightGray;
-  color: White;
-  height: 112px;
-  overflow: hidden;
-  position: absolute;
-  width: 48px;
-  z-index: 1;
+  background: #607D8B;
+  float: left;
+  height: 100vh;
+  width: 60px;
 }
 
 .Toolbar *
 {
+  color: #FFFFFF;
   display: block;
-  margin: 0;
   padding: 16px;
 }
 
 .Toolbar *:hover
 {
-  background: rgb(63, 127, 255);
+  background: #03A4F9;
 }
